[project]
name = "myvaping"
version = "0.1.0"
authors = [{ name = "Jose Luis", email = "josacar@users.noreply.github.com" }]
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "vaping > 1",
  "docutils < 0.21",
  "pyzmq>=26.4.0",
  "whisper>=1.1.10",
  "standalone>=1.0.1",
  "gunicorn>=23.0.0",
]
[tool.uv.sources]
# Avoid blank graphs https://github.com/20c/vaping/issues/173
vodka = { git = "https://github.com/20c/vodka", branch = "master" }

[project.optional-dependencies]
graphite = ["requests>=2.19.1", "graphyte>=1.4"]
rrdtool = ["rrdtool>=0.1.14, <1"]
prometheus = ["prometheus_client>=0.11.0"]
standalone = ["graphsrv>=2", "vodka"]
whisper = ["whisper>=0.9.15, <2"]
zeromq = ["pyzmq>=15.3.0"]
gunicorn = ["gunicorn>2", "gevent>=24.2.1"]
Flask = ["Flask>2", "Flask<2.2"]
## FIXME: wekzeug >2.1.0 breaks static file serving
Werkzeug = ["Werkzeug>2", "Werkzeug<2.1.0"]

# all extras
all = [
  "graphsrv",
  "graphyte",
  "prometheus_client",
  "pyzmq",
  "rrdtool",
  "requests",
  "vodka",
  "whisper",
]
